fix Preview button alignment bugs on 2 pages

--- a/frontend/pages/admin/OrgSettingsPage/_styles.scss
+++ b/frontend/pages/admin/OrgSettingsPage/_styles.scss
@@ -71,6 +71,10 @@
             }
           }
         }
+        .button--inverse {
+          // compensate for button's padding
+          margin-left: -$pad-small;
+        }
       }
 
       &__section-description {
