--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/TeamSettings/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/TeamSettings/_styles.scss
@@ -8,6 +8,6 @@
   }
   .button--inverse {
     // compensate for button's padding
-    margin: -$pad-small 0;
+    margin: -$pad-small;
   }
 }
